--- a/sample-app/src/main/res/values/strings.xml
+++ b/sample-app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">NullAway Sample</string>
+    <string name="app_name">RxThreadEffectChecker Sample</string>
 </resources>
